tests/fixtures/invalid/none_floordiv_none.py
# Cannot floor divide None and None
x: None = None // None
